[project]
name = "yolo-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.5.0",
    "memory-profiler>=0.61.0",
    "more-itertools>=10.8.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "roboflow>=1.2.7",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "ultralytics>=8.3.193",
    "umap-learn>=0.5.9.post2",
]
